--- a/download.html
+++ b/download.html
@@ -8,78 +8,125 @@
 <style>
 :root{
   --pw:#5b2bd6;
+  --pw-dark:#4a21b8;
   --yellow:#ffcf00;
   --bg:#f6f7fb;
 }
+*{box-sizing:border-box}
+
 body{
   margin:0;
-  background:var(--bg);
-  font-family:system-ui,Segoe UI,Arial;
+  background:linear-gradient(180deg,#f3f0ff,var(--bg));
+  font-family:system-ui,-apple-system,Segoe UI,Roboto,Arial;
 }
+
 .wrapper{
-  max-width:420px;
-  margin:30px auto;
+  max-width:430px;
+  margin:32px auto;
   padding:14px;
 }
+
 .card{
   background:#fff;
-  border-radius:16px;
+  border-radius:18px;
   padding:20px;
-  box-shadow:0 10px 25px rgba(0,0,0,.08);
-  margin-bottom:18px;
+  box-shadow:0 12px 30px rgba(0,0,0,.1);
+  margin-bottom:20px;
+  animation:fadeUp .4s ease;
 }
-h2{margin:0 0 6px;color:var(--pw)}
-.sub{font-size:13px;color:#666;margin-bottom:10px}
-input,button{
+
+@keyframes fadeUp{
+  from{opacity:0;transform:translateY(10px)}
+  to{opacity:1;transform:none}
+}
+
+h2{
+  margin:0 0 6px;
+  color:var(--pw);
+  font-weight:800;
+}
+.sub{
+  font-size:13px;
+  color:#666;
+  margin-bottom:12px;
+}
+
+input{
   width:100%;
-  padding:12px;
-  margin-top:10px;
-  border-radius:12px;
+  padding:13px 14px;
+  border-radius:14px;
   border:1.5px solid #ddd;
   font-size:15px;
+  transition:.2s;
 }
+input:focus{
+  outline:none;
+  border-color:var(--pw);
+  box-shadow:0 0 0 3px rgba(91,43,214,.15);
+}
+
 button{
-  background:var(--pw);
-  color:#fff;
-  font-weight:700;
+  width:100%;
+  padding:13px;
+  margin-top:12px;
   border:none;
+  border-radius:16px;
+  background:linear-gradient(135deg,var(--pw),var(--pw-dark));
+  color:#fff;
+  font-size:16px;
+  font-weight:800;
+  cursor:pointer;
+  transition:.2s;
 }
-.hint{font-size:12px;color:#555;margin-top:8px}
-.error{color:#d32f2f;font-size:13px;margin-top:6px}
+button:hover{transform:translateY(-1px)}
+button:active{transform:scale(.98)}
+
+.hint{
+  font-size:12px;
+  color:#555;
+  margin-top:8px;
+  line-height:1.4;
+}
+.error{
+  color:#d32f2f;
+  font-size:13px;
+  margin-top:6px;
+}
+
 .timer{
   background:#fff7cc;
   border:1px dashed var(--yellow);
   padding:10px;
-  border-radius:12px;
-  text-align:center;
-  font-weight:700;
-}
-iframe{
-  width:100%;
-  height:220px;
   border-radius:14px;
-  border:none;
+  text-align:center;
+  font-weight:800;
+  color:#7a5a00;
 }
+
+ol{
+  font-size:14px;
+  padding-left:18px;
+}
+ol li{margin-bottom:6px}
+
 .apk-btn{
   background:linear-gradient(135deg,#ff9800,#ffcf00);
   color:#3b2a00;
-  font-weight:800;
 }
+
 .hide{display:none}
-ol{font-size:14px;padding-left:18px}
-ol li{margin-bottom:6px}
 </style>
 </head>
 
 <body>
 <div class="wrapper">
 
-<!-- 🔐 WEBSITE LOGIN -->
+<!-- 🔐 LOGIN -->
 <div class="card" id="loginBox">
-  <h2>🔐 Login Required</h2>
-  <div class="sub">Enter password to continue</div>
+  <h2>🔐 Secure Login</h2>
+  <div class="sub">PW-style protected access</div>
 
-  <input type="password" id="sitePass" placeholder="Website password">
+  <input type="password" id="sitePass" placeholder="Enter website password">
   <button onclick="checkSite()">Continue</button>
 
   <div class="hint">
@@ -89,7 +136,7 @@ ol li{margin-bottom:6px}
   <div id="siteErr" class="error"></div>
 </div>
 
-<!-- 🌐 WEBSITE CONTENT -->
+<!-- 🔓 CONTENT -->
 <div id="content" class="hide">
 
   <div class="card">
@@ -97,17 +144,12 @@ ol li{margin-bottom:6px}
   </div>
 
   <div class="card">
-    <h2>🎥 Video Guide</h2>
-    <iframe src="https://drive.google.com/file/d/1We5gjl7d5t9Z9OfYAFObuuIX3tY5a_9T/preview"></iframe>
-  </div>
-
-  <div class="card">
     <h2>📌 Important Instructions</h2>
     <ol>
-      <li>Turn OFF Private / Custom DNS in phone settings.</li>
+      <li>Turn OFF Private / Custom DNS.</li>
       <li>Use Chrome or Opera Mini (Opera Mini = fewer ads).</li>
       <li>If ads open, press BACK once.</li>
-      <li>If website does not open, turn ON VPN.</li>
+      <li>If site does not open, turn ON VPN.</li>
       <li>Laptop users: VPN + Ad-Blocker recommended.</li>
     </ol>
   </div>
@@ -124,9 +166,10 @@ ol li{margin-bottom:6px}
 
 <!-- 📦 APK LOGIN -->
 <div class="card hide" id="apkBox">
-  <h2>APK Download Login</h2>
+  <h2>📦 APK Download</h2>
+  <div class="sub">Extra security for application</div>
 
-  <input type="password" id="apkPass" placeholder="APK password">
+  <input type="password" id="apkPass" placeholder="Enter APK password">
   <button onclick="checkApk()">Unlock Download</button>
 
   <div class="hint">
@@ -144,7 +187,7 @@ ol li{margin-bottom:6px}
 </div>
 
 <script>
-/* ===== DATE & PASSWORD AUTO ===== */
+/* ===== DATE & PASSWORD ===== */
 function todayStr(){
   const d=new Date();
   return String(d.getDate()).padStart(2,"0")+
@@ -157,7 +200,7 @@ const APK_PASS ="APK@"+todayStr();
 siteHint.innerText=SITE_PASS;
 apkHint.innerText =APK_PASS;
 
-/* ===== ATTEMPT LIMIT ===== */
+/* ===== ATTEMPTS ===== */
 let siteTry=Number(localStorage.getItem("siteTry"))||0;
 let apkTry =Number(localStorage.getItem("apkTry"))||0;
 
@@ -196,11 +239,11 @@ function startTimer(){
     const h=Math.floor(left/3600000);
     const m=Math.floor((left%3600000)/60000);
     const s=Math.floor((left%60000)/1000);
-    timer.innerText=`Time left: ${h}h ${m}m ${s}s`;
+    timer.innerText=`⏳ Time left: ${h}h ${m}m ${s}s`;
   },1000);
 }
 
-/* ===== WEBSITE OPEN ===== */
+/* ===== OPEN WEBSITE ===== */
 function openWebsite(){
   window.open("https://rarestudy.site","_blank");
 }
@@ -208,6 +251,7 @@ function openWebsite(){
 /* ===== APK ===== */
 function openApk(){
   apkBox.classList.remove("hide");
+  apkBox.scrollIntoView({behavior:"smooth"});
 }
 function checkApk(){
   if(apkTry>=2){
@@ -226,4 +270,4 @@ function checkApk(){
 </script>
 
 </body>
-</html>
+    </html>
