--- a/download.html
+++ b/download.html
@@ -6,130 +6,104 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 <style>
-:root{
-  --bg:#0c0c0e;
-  --card:#151518;
-  --text:#ffffff;
-  --muted:#b5b5b5;
-  --accent:#ffffff;
-  --danger:#ff4d4d;
-}
-
-*{box-sizing:border-box}
-
 body{
   margin:0;
-  background:var(--bg);
-  font-family:system-ui,-apple-system,Segoe UI,Roboto;
-  color:var(--text);
+  background:#0b0b0d;
+  font-family:system-ui,Segoe UI;
+  color:#fff;
 }
-
 .wrapper{
   max-width:420px;
-  margin:40px auto;
+  margin:30px auto;
   padding:16px;
 }
-
-.card{
-  background:var(--card);
-  border-radius:22px;
-  padding:24px;
-  box-shadow:0 20px 50px rgba(0,0,0,.65);
-}
-
 .logo{
   width:72px;
   height:72px;
   border-radius:50%;
   display:block;
-  margin:0 auto 12px;
+  margin:0 auto 14px;
+  object-fit:contain;
+  background:#000;
+  padding:8px;
 }
-
-h2{
-  text-align:center;
-  margin:6px 0;
+.card{
+  background:#151518;
+  border-radius:20px;
+  padding:22px;
+  box-shadow:0 15px 40px rgba(0,0,0,.6);
 }
-
-.sub{
-  text-align:center;
-  color:var(--muted);
-  font-size:13px;
-}
-
+h2,h3{text-align:center;margin:6px 0}
+.sub{text-align:center;color:#bbb;font-size:13px}
 input{
   width:100%;
   padding:13px;
-  margin-top:14px;
   border-radius:14px;
   border:none;
+  margin-top:14px;
   font-size:15px;
 }
-
 button{
   width:100%;
-  margin-top:16px;
   padding:13px;
+  margin-top:16px;
   border:none;
   border-radius:16px;
-  background:var(--accent);
+  background:#fff;
   color:#000;
   font-weight:800;
-  font-size:15px;
-  cursor:pointer;
 }
-
 .hint{
   font-size:12px;
-  color:var(--muted);
+  color:#aaa;
   text-align:center;
   margin-top:10px;
 }
-
 .error{
-  color:var(--danger);
+  color:#ff4d4d;
   text-align:center;
   margin-top:8px;
   font-size:13px;
 }
-
 #content{display:none}
-
 .banner{
-  background:#0a0a0a;
-  border-radius:16px;
+  background:#000;
   padding:10px;
+  border-radius:14px;
   text-align:center;
   font-weight:800;
-  margin-bottom:16px;
+  margin-bottom:14px;
 }
-
-.section{margin-top:20px}
-.section h3{margin-bottom:8px}
-
+.timer{
+  background:#1f1f22;
+  padding:10px;
+  border-radius:14px;
+  text-align:center;
+  font-weight:700;
+  margin-bottom:14px;
+}
+.section{margin-top:18px}
 iframe{
   width:100%;
   height:220px;
   border:none;
-  border-radius:16px;
+  border-radius:14px;
 }
-
 a.btn{
   display:block;
   text-align:center;
   margin-top:14px;
   padding:13px;
-  background:#ffffff;
+  background:#fff;
   color:#000;
-  border-radius:16px;
+  border-radius:14px;
   font-weight:800;
   text-decoration:none;
 }
-
-ol{
-  padding-left:18px;
-  font-size:14px;
-  line-height:1.6;
+ul{
+  font-size:13px;
   color:#ddd;
+  padding-left:18px;
 }
 </style>
 </head>
@@ -137,92 +111,134 @@ ol{
 <body>
 <div class="wrapper">
 
+<!-- LOGO (ALWAYS VISIBLE) -->
+<img src="pw-logo.png" class="logo">
+
 <!-- LOGIN -->
 <div class="card" id="loginBox">
-  <img src="pw-logo.png" class="logo">
   <h2>Website Login</h2>
-  <div class="sub">Secure access required</div>
+  <div class="sub">Password auto-changes every day</div>
 
-  <input type="password" id="passInput" placeholder="Enter password">
-  <button onclick="check()">Continue</button>
+  <input type="password" id="sitePass" placeholder="Enter website password">
+  <button onclick="login()">Continue</button>
 
   <div class="hint">
-    Password format: <b>DDMMYYYY</b><br>
-    Today: <b id="todayHint"></b>
+    Website password: <b>RS@DDMMYYYY</b><br>
+    Today: <b id="siteHint"></b>
   </div>
-  <div class="error" id="err"></div>
+  <div class="error" id="siteErr"></div>
 </div>
 
 <!-- CONTENT -->
 <div class="card" id="content">
-  <img src="pw-logo.png" class="logo">
   <div class="banner">✅ ACCESS GRANTED</div>
 
+  <div class="timer" id="timer"></div>
+
   <div class="section">
-    <h3>🔑 How to Generate Access Key (Valid for 24 Hours)</h3>
-    <ol>
-      <li>If opened from an APP, Chrome may show ads.</li>
-      <li>Use <b>Opera Mini</b> to avoid ads.</li>
-      <li>If site doesn’t open, turn ON VPN.</li>
-      <li>Turn OFF Private DNS / Custom DNS.</li>
-      <li>Update Chrome to latest version.</li>
-      <li>If ad opens, press BACK once.</li>
-      <li>Laptop users: VPN + Ad-Blocker.</li>
-      <li>Key valid for 24 hours only.</li>
-    </ol>
+    <h3>📜 Login History</h3>
+    <ul id="history"></ul>
   </div>
 
   <div class="section">
     <h3>🎥 Video Guide</h3>
     <iframe src="https://drive.google.com/file/d/1We5gjl7d5t9Z9OfYAFObuuIX3tY5a_9T/preview"></iframe>
-    <div class="sub">Video sirf guide ke liye hai</div>
   </div>
 
   <div class="section">
-    <h3>📦 Download Application (APK)</h3>
-    <a class="btn"
-       href="https://drive.google.com/uc?export=download&id=1dTC01CLUktCk2BDQN1bfEglRUuvpM8sH"
-       target="_blank">
-       Download App (APK)
+    <h3>🌐 Website</h3>
+    <a class="btn" href="https://rarestudy.site" target="_blank">Open Website</a>
+  </div>
+
+  <div class="section">
+    <h3>📦 APK Download</h3>
+    <input type="password" id="apkPass" placeholder="Enter APK password">
+    <button onclick="unlockAPK()">Unlock APK</button>
+
+    <div class="hint">
+      APK password: <b>APK@DDMMYYYY</b><br>
+      Today: <b id="apkHint"></b>
+    </div>
+    <div class="error" id="apkErr"></div>
+
+    <a class="btn" id="apkLink" style="display:none"
+       href="https://drive.google.com/uc?export=download&id=1dTC01CLUktCk2BDQN1bfEglRUuvpM8sH">
+       Download APK
     </a>
-    <div class="sub">Android devices only</div>
   </div>
 </div>
 
 </div>
 
 <script>
-const maxAttempts = 3;
-let attempts = 0;
-
-function todayPassword(){
+/* ===== PASSWORDS ===== */
+function today(){
   const d=new Date();
   return String(d.getDate()).padStart(2,'0')+
          String(d.getMonth()+1).padStart(2,'0')+
          d.getFullYear();
 }
+const SITE_PASS = "RS@" + today();
+const APK_PASS  = "APK@" + today();
 
-document.getElementById("todayHint").innerText = todayPassword();
+siteHint.innerText = SITE_PASS;
+apkHint.innerText  = APK_PASS;
 
-function check(){
-  const entered=document.getElementById("passInput").value;
-  if(entered===todayPassword()){
-    document.getElementById("loginBox").style.display="none";
-    document.getElementById("content").style.display="block";
+/* ===== LOGIN ===== */
+let tries = 3;
+function login(){
+  if(sitePass.value === SITE_PASS){
+    loginBox.style.display="none";
+    content.style.display="block";
+    saveHistory();
+    startTimer();
+    renderHistory();
   }else{
-    attempts++;
-    document.getElementById("err").innerText="❌ Wrong password";
-    if(attempts>=maxAttempts){
-      document.getElementById("err").innerText="❌ Too many attempts. Refresh page.";
-      document.querySelector("button").disabled=true;
-    }
+    tries--;
+    siteErr.innerText="❌ Wrong password. Attempts left: "+tries;
   }
 }
 
-window.onload=()=>{
-  document.getElementById("loginBox").style.display="block";
-  document.getElementById("content").style.display="none";
+/* ===== TIMER ===== */
+function startTimer(){
+  const start = localStorage.getItem("startTime") || Date.now();
+  localStorage.setItem("startTime", start);
+
+  setInterval(()=>{
+    const diff = 86400000 - (Date.now() - start);
+    if(diff <= 0){ localStorage.clear(); location.reload(); }
+    const h=Math.floor(diff/3600000);
+    const m=Math.floor((diff%3600000)/60000);
+    const s=Math.floor((diff%60000)/1000);
+    timer.innerText=`⏳ Time left: ${h}h ${m}m ${s}s`;
+  },1000);
 }
+
+/* ===== APK ===== */
+function unlockAPK(){
+  if(apkPass.value === APK_PASS){
+    apkLink.style.display="block";
+    apkErr.innerText="";
+  }else{
+    apkErr.innerText="❌ Wrong APK password";
+  }
+}
+
+/* ===== LOGIN HISTORY ===== */
+function saveHistory(){
+  const list = JSON.parse(localStorage.getItem("history")||"[]");
+  list.unshift(new Date().toLocaleString());
+  localStorage.setItem("history", JSON.stringify(list.slice(0,5)));
+}
+function renderHistory(){
+  const list = JSON.parse(localStorage.getItem("history")||"[]");
+  history.innerHTML = list.map(i=>`<li>${i}</li>`).join("");
+}
+
+window.onload=()=>{
+  loginBox.style.display="block";
+  content.style.display="none";
+};
 </script>
 
 </body>
