--- a/download.html
+++ b/download.html
@@ -6,104 +6,86 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 <style>
+:root{
+  --bg:#0b0b0b;
+  --card:#141414;
+  --pw:#ffffff;
+  --accent:#22c55e;
+  --danger:#ef4444;
+}
 body{
   margin:0;
-  background:#0b0b0d;
-  font-family:system-ui,Segoe UI;
+  background:var(--bg);
+  font-family:system-ui,Segoe UI,Arial;
   color:#fff;
 }
 .wrapper{
   max-width:420px;
   margin:30px auto;
-  padding:16px;
-}
-.logo{
-  width:72px;
-  height:72px;
-  border-radius:50%;
-  display:block;
-  margin:0 auto 14px;
-  object-fit:contain;
-  background:#000;
-  padding:8px;
+  padding:14px;
 }
 .card{
-  background:#151518;
-  border-radius:20px;
-  padding:22px;
-  box-shadow:0 15px 40px rgba(0,0,0,.6);
+  background:var(--card);
+  border-radius:18px;
+  padding:20px;
+  box-shadow:0 10px 30px rgba(0,0,0,.6);
 }
-h2,h3{text-align:center;margin:6px 0}
-.sub{text-align:center;color:#bbb;font-size:13px}
-input{
+.logo{
+  width:90px;height:90px;
+  border:4px solid #fff;
+  border-radius:50%;
+  display:flex;
+  align-items:center;
+  justify-content:center;
+  margin:0 auto 14px;
+  font-size:34px;
+  font-weight:800;
+}
+h2{text-align:center;margin:10px 0;}
+.sub{text-align:center;color:#aaa;font-size:13px}
+input,button{
   width:100%;
-  padding:13px;
+  padding:12px;
+  margin-top:12px;
   border-radius:14px;
   border:none;
-  margin-top:14px;
   font-size:15px;
 }
+input{background:#0f0f0f;color:#fff;border:1px solid #333}
 button{
-  width:100%;
-  padding:13px;
-  margin-top:16px;
-  border:none;
-  border-radius:16px;
-  background:#fff;
-  color:#000;
-  font-weight:800;
+  background:#fff;color:#000;font-weight:700;
 }
-.hint{
-  font-size:12px;
-  color:#aaa;
-  text-align:center;
-  margin-top:10px;
-}
-.error{
-  color:#ff4d4d;
-  text-align:center;
-  margin-top:8px;
-  font-size:13px;
-}
-#content{display:none}
-.banner{
-  background:#000;
-  padding:10px;
-  border-radius:14px;
-  text-align:center;
-  font-weight:800;
-  margin-bottom:14px;
-}
-.timer{
-  background:#1f1f22;
+.hint{font-size:12px;color:#bbb;margin-top:6px}
+.error{color:var(--danger);font-size:13px;margin-top:6px}
+.badge{
+  background:#052e16;
+  border:1px solid var(--accent);
+  color:#86efac;
   padding:10px;
   border-radius:14px;
   text-align:center;
   font-weight:700;
-  margin-bottom:14px;
 }
-.section{margin-top:18px}
-iframe{
-  width:100%;
-  height:220px;
-  border:none;
+.timer{
+  margin-top:10px;
+  text-align:center;
+  background:#020617;
+  padding:10px;
   border-radius:14px;
 }
+.section{margin-top:18px}
+iframe{width:100%;height:220px;border-radius:14px;border:none}
+.hidden{display:none}
 a.btn{
   display:block;
   text-align:center;
-  margin-top:14px;
-  padding:13px;
+  padding:12px;
+  margin-top:10px;
+  border-radius:14px;
   background:#fff;
   color:#000;
-  border-radius:14px;
-  font-weight:800;
   text-decoration:none;
-}
-ul{
-  font-size:13px;
-  color:#ddd;
-  padding-left:18px;
+  font-weight:700;
 }
 </style>
 </head>
@@ -111,34 +93,29 @@ ul{
 <body>
 <div class="wrapper">
 
-<!-- LOGO (ALWAYS VISIBLE) -->
-<img src="pw-logo.png" class="logo">
-
-<!-- LOGIN -->
 <div class="card" id="loginBox">
+  <div class="logo">PW</div>
   <h2>Website Login</h2>
-  <div class="sub">Password auto-changes every day</div>
+  <div class="sub">Secure Access (24 Hours)</div>
 
   <input type="password" id="sitePass" placeholder="Enter website password">
-  <button onclick="login()">Continue</button>
-
-  <div class="hint">
-    Website password: <b>RS@DDMMYYYY</b><br>
-    Today: <b id="siteHint"></b>
-  </div>
+  <button onclick="checkSite()">Continue</button>
+  <div class="hint">Format: RS@DDMMYYYY</div>
   <div class="error" id="siteErr"></div>
-</div>
-
-<!-- CONTENT -->
-<div class="card" id="content">
-  <div class="banner">✅ ACCESS GRANTED</div>
-
-  <div class="timer" id="timer"></div>
 
   <div class="section">
-    <h3>📜 Login History</h3>
-    <ul id="history"></ul>
+    <h3>🔑 How to Generate Access Key</h3>
+    <p>• Turn OFF Private DNS</p>
+    <p>• Use Chrome / Opera Mini</p>
+    <p>• Turn ON VPN if site doesn't open</p>
+    <p>• Laptop users: VPN + AdBlock</p>
+    <p>• Key valid for 24 hours only</p>
   </div>
+</div>
+
+<div class="card hidden" id="content">
+  <div class="badge">✅ ACCESS GRANTED</div>
+  <div class="timer" id="timer"></div>
 
   <div class="section">
     <h3>🎥 Video Guide</h3>
@@ -153,15 +130,10 @@ ul{
   <div class="section">
     <h3>📦 APK Download</h3>
     <input type="password" id="apkPass" placeholder="Enter APK password">
-    <button onclick="unlockAPK()">Unlock APK</button>
-
-    <div class="hint">
-      APK password: <b>APK@DDMMYYYY</b><br>
-      Today: <b id="apkHint"></b>
-    </div>
+    <button onclick="checkApk()">Unlock APK</button>
+    <div class="hint">Format: APK@DDMMYYYY</div>
     <div class="error" id="apkErr"></div>
-
-    <a class="btn" id="apkLink" style="display:none"
+    <a class="btn hidden" id="apkLink"
        href="https://drive.google.com/uc?export=download&id=1dTC01CLUktCk2BDQN1bfEglRUuvpM8sH">
        Download APK
     </a>
@@ -171,75 +143,59 @@ ul{
 </div>
 
 <script>
-/* ===== PASSWORDS ===== */
-function today(){
-  const d=new Date();
-  return String(d.getDate()).padStart(2,'0')+
-         String(d.getMonth()+1).padStart(2,'0')+
-         d.getFullYear();
+const today=()=>{
+ const d=new Date();
+ return String(d.getDate()).padStart(2,'0')+
+        String(d.getMonth()+1).padStart(2,'0')+
+        d.getFullYear();
 }
-const SITE_PASS = "RS@" + today();
-const APK_PASS  = "APK@" + today();
+const sitePassword="RS@"+today();
+const apkPassword="APK@"+today();
+let siteTry=0,apkTry=0;
 
-siteHint.innerText = SITE_PASS;
-apkHint.innerText  = APK_PASS;
-
-/* ===== LOGIN ===== */
-let tries = 3;
-function login(){
-  if(sitePass.value === SITE_PASS){
-    loginBox.style.display="none";
-    content.style.display="block";
-    saveHistory();
-    startTimer();
-    renderHistory();
-  }else{
-    tries--;
-    siteErr.innerText="❌ Wrong password. Attempts left: "+tries;
-  }
+function checkSite(){
+ if(siteTry>=3)return;
+ if(sitePass.value===sitePassword){
+  localStorage.setItem("loginTime",Date.now());
+  loginBox.classList.add("hidden");
+  content.classList.remove("hidden");
+  startTimer();
+ }else{
+  siteTry++;
+  siteErr.innerText="❌ Wrong password ("+(3-siteTry)+" attempts left)";
+ }
 }
 
-/* ===== TIMER ===== */
+function checkApk(){
+ if(apkTry>=3)return;
+ if(apkPass.value===apkPassword){
+  apkLink.classList.remove("hidden");
+ }else{
+  apkTry++;
+  apkErr.innerText="❌ Wrong APK password ("+(3-apkTry)+" attempts left)";
+ }
+}
+
 function startTimer(){
-  const start = localStorage.getItem("startTime") || Date.now();
-  localStorage.setItem("startTime", start);
-
-  setInterval(()=>{
-    const diff = 86400000 - (Date.now() - start);
-    if(diff <= 0){ localStorage.clear(); location.reload(); }
-    const h=Math.floor(diff/3600000);
-    const m=Math.floor((diff%3600000)/60000);
-    const s=Math.floor((diff%60000)/1000);
-    timer.innerText=`⏳ Time left: ${h}h ${m}m ${s}s`;
-  },1000);
-}
-
-/* ===== APK ===== */
-function unlockAPK(){
-  if(apkPass.value === APK_PASS){
-    apkLink.style.display="block";
-    apkErr.innerText="";
-  }else{
-    apkErr.innerText="❌ Wrong APK password";
-  }
-}
-
-/* ===== LOGIN HISTORY ===== */
-function saveHistory(){
-  const list = JSON.parse(localStorage.getItem("history")||"[]");
-  list.unshift(new Date().toLocaleString());
-  localStorage.setItem("history", JSON.stringify(list.slice(0,5)));
-}
-function renderHistory(){
-  const list = JSON.parse(localStorage.getItem("history")||"[]");
-  history.innerHTML = list.map(i=>`<li>${i}</li>`).join("");
+ const start=localStorage.getItem("loginTime");
+ setInterval(()=>{
+  const diff=86400000-(Date.now()-start);
+  if(diff<=0){location.reload()}
+  const h=Math.floor(diff/3600000);
+  const m=Math.floor(diff%3600000/60000);
+  const s=Math.floor(diff%60000/1000);
+  timer.innerText=`⏳ Time left: ${h}h ${m}m ${s}s`;
+ },1000)
 }
 
 window.onload=()=>{
-  loginBox.style.display="block";
-  content.style.display="none";
-};
+ const t=localStorage.getItem("loginTime");
+ if(t && Date.now()-t<86400000){
+  loginBox.classList.add("hidden");
+  content.classList.remove("hidden");
+  startTimer();
+ }
+}
 </script>
-
 </body>
 </html>
